<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AboutAppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/btn_about_app_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"

            android:scaleType="fitXY"
            android:src="@drawable/return_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/About_Software"
            android:textColor="@color/black"
            android:textSize="24sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/btn_about_app"
                android:layout_width="match_parent"
                android:background="@drawable/item_background"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/App_version"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="3dp"
                    android:id="@+id/tv_app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1.0.0 - 20230823 Release"
                    />
                <TextView
                    android:layout_marginTop="3dp"
                    android:id="@+id/tv_is_newest_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="当前已是最新版本"
                    />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/item_background"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/Questions_and_suggestions_feedback"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_QQ_group_number"
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="QQ群：727286533"
                    />
                <TextView
                    android:id="@+id/tv_email_about_app"
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="邮箱：2601213628@qq.com"
                    />



            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>